# Multi-Pool-Mining-Raven

./: BMAD_XMRIG_INTEGRATION_GUIDE.md  CudaBitcoinMiner.cpp  KAWPOW_INTEGRATION_SUMMARY.md  OPTIMIZED_MINING_EXPLAINED.md  SHA256SUMS  architecture_options.md  auto_miner.py  auto_miner_optimized.py  auto_miner_x16r.py  auto_miner_x16r_adapters.py  auto_miner_x16r_oo.py  auto_miner_x16r_optimized.py  auto_miner_x16r_proper.py  auto_miner_x16r_proper_improved.py  build.bat  build_kawpow_miner.bat  build_multi_target.bat  build_x16r_miner.bat  build_x16r_proper.bat  calculate_hashrate.py  capture_working_format.py  check_gpus.py  check_proxy_status.py  comprehensive_fix.py  comprehensive_pool_fix.py  config.json  config_fixed.json  config_test_1.json  config_test_2.json  config_test_3.json  config_test_4.json  debug.jobs  debug_cpu_x16r_submit.py  debug_header_validation.py  debug_nonce.py  debug_real_mining.py  debug_real_x16r_submit.py  debug_submission.py  debug_x16r_pools.py  debug_x16r_pools_fixed.py  (+92 more)
.bmad-core/: install-manifest.yaml
adapters/: __init__.py  base.py  factory.py  pool_2miners.py  pool_herominers.py  pool_nanopool.py  pool_ravenminer.py  pool_woolypooly.py  stratum1.py  stratum1_2miners.py  stratum2.py
bmad-dev/: AGENTS_README.md  CMakeLists.txt  INTEGRATION_GUIDE.md  README.md  SETUP_GUIDE.md  STEP4_SUMMARY.md  TESTING_SUMMARY.md  TEST_DOCUMENTATION.md  bmad_agents_config.json  bmad_config.json  build.bat  install_agents.bat  install_agents.ps1  install_agents_simple.bat  run_tests.bat  test_agents.cpp  test_bmad.cpp  test_bmad_integration.cpp  test_bmad_multi.cpp  test_comprehensive_suite.cpp  test_different_jobs_demo.cpp  test_gpu_memory.cpp  test_multi_pool.cpp  test_optimized_kernel.cpp  test_performance_comparison.cpp  test_performance_tester.cpp  test_quick_check.cpp  test_real_mining_actual_pools.cpp  test_real_mining_monitoring.cpp  test_real_mining_with_xmrig.cpp  test_real_ravencoin_pools.cpp  test_simple.cpp  test_simple_multi.cpp  test_unit_components.cpp
bmad-dev/docs/: different_jobs_solution.md  epic_2_cuda_kernel_development.md  problem_solution_mapping.md
bmad-dev/include/: bmad_gpu_memory_manager.h  bmad_kawpow_multi.h  bmad_memory_manager.h  bmad_performance_tester.h  bmad_pool_connector.h  bmad_pool_manager.h  bmad_share_converter.h  bmad_types.h  bmad_xmrig_bridge.h
bmad-dev/src/: bmad_gpu_memory_manager.cpp  bmad_kawpow_algorithm.cpp  bmad_kawpow_algorithm.h  bmad_kawpow_host.cpp  bmad_kawpow_multi.cu  bmad_kawpow_optimized.cpp  bmad_kawpow_optimized.h  bmad_memory_manager.cpp  bmad_memory_manager.cu  bmad_performance_tester.cpp  bmad_pool_connector.cpp  bmad_pool_manager.cpp  bmad_real_mining_test.cpp  bmad_real_pool_test.cpp  bmad_share_converter.cpp  bmad_xmrig_bridge.cpp
bmad-dev/test/: CMakeLists.txt  test_bmad_core.cpp
docs/: prd.md  story-pipeline.md
docs/stories/: epic-1-story-1-1-bmad-core-library-setup.md
sph/: ccminer-config.h  miner.h
